--- a/src/main/resources/templates/store_index.html
+++ b/src/main/resources/templates/store_index.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="/css/storeIndex.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
     <title>Title</title>
+
+    <style>
+        .message{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: red;
+            font-weight: bold;
+            margin-bottom: 50px;
+        }
+    </style>
 </head>
 <body>
 
@@ -33,7 +43,7 @@
         <h4 th:text="${movieProduct.movie_name}"></h4>
         <div>
             <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold"></span>
-            <a th:href="@{/addCartItem(movieId=${movieProduct.getMovie_id()})}"><button title="Add To Cart"><i class="fa fa-shopping-cart"></i></button></a>
+            <button title="Add To Cart"><a th:href="@{/addCartItem(movieId=${movieProduct.getMovie_id()})}"><i class="fa fa-shopping-cart"></i></a></button>
         </div>
     </div>
 </div>
