--- a/src/main/resources/templates/adminPanel_index.html
+++ b/src/main/resources/templates/adminPanel_index.html
@@ -218,6 +218,8 @@
 
   <div id="message" class="message" th:text="${message}"></div>
 
+  <div class="message" th:text="${messageUpdate}"></div>
+
 
   <div class="container-xl">
     <div class="table-responsive">
@@ -254,7 +256,7 @@
             <td th:text="${movieProduct.getListPrice()}"></td>
 
             <td>
-              <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+              <a th:href="@{/getMovieProductById(movieId=${movieProduct.getMovie_id()})}"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
               <a th:href="@{/deleteMovieProduct(movieId=${movieProduct.getMovie_id()})}" class="remove_cart" rel="2" title="Delete">
                 <i class="fa fa-trash-o"></i>
               </a>
@@ -307,44 +309,6 @@
       </div>
     </div>
   </div>
-
-
-  <!-- Edit Modal HTML -->
-  <div id="editEmployeeModal" class="modal fade">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form>
-          <div class="modal-header">
-            <h4 class="modal-title">Edit Employee</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label>Name</label>
-              <input type="text" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label>Email</label>
-              <input type="email" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label>Address</label>
-              <textarea class="form-control" required></textarea>
-            </div>
-            <div class="form-group">
-              <label>Phone</label>
-              <input type="text" class="form-control" required>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-            <input type="submit" class="btn btn-info" value="Save">
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-
 
 
 </div>
