--- a/src/main/resources/templates/purchased_movies.html
+++ b/src/main/resources/templates/purchased_movies.html
@@ -7,33 +7,71 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Title</title>
+
+  <style>
+    .notBought{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 300px;
+      font-weight: bold;
+    }
+
+
+    .center {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
 
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
-<div>
-  <h1 th:text="|Movies Purchased by ${#ctx.session.loggedInUser.getUsername()} |"></h1>
+<div th:if="${#ctx.session.shopOrderForUser == null}">
+
+  <p th:text="|You have not bought any digital movies with us ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" ></p>
+
+
+  <div class="center">
+    <a th:href="@{/store_index}"><button type="button" class="btn btn-danger" title="Store">Go to store</button></a>
+  </div>
+
+
 </div>
 
 
-<div class="wrapper">
-  <div th:each="movieProduct : ${allMovieProducts}">
-    <div class="product-card">
-      <div class="container">
-        <img th:src="@{'/css/images/'+${movieProduct.movie_image}}" alt="" class="image">
-        <div class="middle">
-          <p th:text="${movieProduct.getMovie_info()}" class="text"></p>
+  <div th:unless="${#ctx.session.shopOrderForUser == null}">
+
+    <div>
+      <h1 th:text="|Movies Purchased by ${#ctx.session.loggedInUser.getUsername()} |"></h1>
+    </div>
+
+
+    <div class="wrapper">
+      <div th:each="movieProduct : ${allMovieProducts}">
+        <div class="product-card">
+          <div class="container">
+            <img th:src="@{'/css/images/'+${movieProduct.movie_image}}" alt="" class="image">
+            <div class="middle">
+              <p th:text="${movieProduct.getMovie_info()}" class="text"></p>
+            </div>
+          </div>
+          <h4 th:text="${movieProduct.movie_name}"></h4>
+          <div>
+            <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold"></span>
+          </div>
         </div>
       </div>
-      <h4 th:text="${movieProduct.movie_name}"></h4>
-      <div>
-        <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold"></span>
-      </div>
     </div>
-  </div>
-</div>
 
+
+  </div>
 
 </body>
 </html>
