--- a/src/main/resources/templates/purchased_movies.html
+++ b/src/main/resources/templates/purchased_movies.html
@@ -33,7 +33,7 @@
 
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
-<div th:if="${#ctx.session.shopOrderForUser == null}">
+<div th:if="${allMovieProducts == null}">
 
   <p th:text="|You have not bought any digital movies with us ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" ></p>
 
@@ -46,7 +46,7 @@
 </div>
 
 
-  <div th:unless="${#ctx.session.shopOrderForUser == null}">
+  <div th:unless="${allMovieProducts == null}">
 
     <div>
       <h1 th:text="|Movies Purchased by ${#ctx.session.loggedInUser.getUsername()} |"></h1>
