--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -47,11 +47,16 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" th:href="@{/purchased_movies}" >Purchased Movies</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/friends}" >Friends</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/notifications}" >notifications</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Friends
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" th:href="@{/friends}">My Friends</a></li>
+              <li><a class="dropdown-item" th:href="@{/addFriends}">Add Friends</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" th:href="@{/notifications}">Friend Requests</a></li>
+            </ul>
           </li>
           <li th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}" class="nav-item">
             <a class="nav-link active" aria-current="page" th:href="@{/adminPanel_index}" >AdminPanel</a>
@@ -76,5 +81,6 @@
   <!--<div th:replace="~{fragments/language_menu :: language-menu-bar}"></div>-->
 
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
