--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -41,11 +41,15 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" th:href="@{/subscription_index}" >Subscriptions</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/store_index}" >Store</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/purchased_movies}" >Purchased Movies</a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Store
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" th:href="@{/store_index}">Store</a></li>
+              <li><a class="dropdown-item" th:href="@{/purchased_movies}">Purchased Movies</a></li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,8 +62,14 @@
               <li><a class="dropdown-item" th:href="@{/notifications}">Friend Requests</a></li>
             </ul>
           </li>
-          <li th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}" class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/adminPanel_index}" >AdminPanel</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Admin Panel
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}"><a class="dropdown-item" th:href="@{/adminPanel_index}">Admin Movie Product Panel</a></li>
+              <li th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}"><a class="dropdown-item" th:href="@{/adminPanelStats}">Statistics</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
