--- a/src/main/resources/templates/addFriends.html
+++ b/src/main/resources/templates/addFriends.html
@@ -7,9 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <style>
+        body{
+            margin: 0;
+        }
+
+        #background{
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
+    </style>
 
 </head>
 <body>
+
+<div id="background"></div>
+
 <div th:if="${#ctx.session.loggedInUser != null}">
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
     <h4>Add friends</h4>
