--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,9 +5,27 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+
+  <style>
+    body{
+      margin: 0;
+    }
+
+    #background{
+      background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+      height: 100vh;
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      position: fixed;
+      top: 0;
+      z-index: -1;
+    }
+  </style>
   <title>Error!</title>
 </head>
 <body>
+<div id="background"></div>
 <!--<div th:replace="~{fragments/menu :: menu-bar}"></div>-->
 <h1>Oops....</h1>
 <p th:if="${errType != null}" th:text="|${errType} occurred...|"></p>
