--- a/src/main/resources/templates/registerFailed.html
+++ b/src/main/resources/templates/registerFailed.html
@@ -8,9 +8,6 @@
 </head>
 <style>
 
-  body{
-  background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
-  }
 
   h2{
     display: flex;
@@ -28,6 +25,21 @@
     align-items: center;
   }
 
+  body{
+    margin: 0;
+  }
+
+  #background{
+    background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    position: fixed;
+    top: 0;
+    z-index: -1;
+  }
+
 </style>
 <body>
 
@@ -35,6 +47,7 @@
   <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
 </header>
 
+<div id="background"></div>
 
 <h2>Registration Failed</h2>
 
