--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -9,10 +9,19 @@
     <title>Success!</title>
 <style>
     body{
-        background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
-
+        margin: 0;
     }
 
+    #background{
+        background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        background-position: center center;
+        position: fixed;
+        top: 0;
+        z-index: -1;
+    }
 </style>
 
 </head>
@@ -20,6 +29,8 @@
 <!--<div th:replace="~{fragments/menu :: menu-bar}"></div>-->
 
 <div th:if="${#ctx.session.loggedInUser != null}">
+
+    <div id="background"></div>
 
 <div class="container">
 
