--- a/src/main/resources/templates/registerSuccessUser.html
+++ b/src/main/resources/templates/registerSuccessUser.html
@@ -20,10 +20,8 @@
     }
 
     body{
-      /* background: black;
-
-       */
-      color: #fff;
+      background: black;
+      /* color: #fff;*/
     }
 
     .wrapper{
@@ -47,6 +45,11 @@
       position: relative;
       overflow: hidden;
       box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+      transition: transform .5s;
+    }
+
+    .box:hover {
+      transform: scale(1.05);
     }
 
     .box img{
@@ -60,7 +63,7 @@
     .overlay{
       height: 0;
       width: 100%;
-      background: linear-gradient(transparent, #1c1c1c 58% );
+      background: linear-gradient(transparent, #1c1c1c 100% );
       border-radius: 10px;
       position: absolute;
       left: 0;
@@ -110,25 +113,22 @@
       justify-content: center;
       align-items: center;
       font-size: 50px;
-      color: darkred;
+      color: white;
       font-weight: bold;
-      -webkit-text-stroke: 3px black;
+      -webkit-text-stroke: 1px darkred;
     }
 
     p{
-      font-size: 12px;
+      font-size: 10px;
       font-family: poppins;
+      color: white;
+      font-weight: bold;
     }
 
-
-    h1{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 50px;
-      color: darkred;
+    h3{
       font-weight: bold;
-      -webkit-text-stroke: 3px black;
+      font-family: poppins;
+      color: white;
     }
 
     .register{
@@ -136,15 +136,38 @@
       justify-content: center;
       align-items: center;
       font-weight: bold;
-      color: black;
+      color: white;
       font-size: 20px;
       margin-top: 50px;
+    }
+  </style>
+
+  <style>
+    body{
+      margin: 0;
+    }
+
+    #background{
+      background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+      height: 100vh;
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      position: fixed;
+      top: 0;
+      z-index: -1;
     }
   </style>
 </head>
 <body>
 <!-- Include the menu bar fragment -->
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
+
+<div id="background"></div>
+
+<div>
+  <h1>Most Popular Movies</h1>
+</div>
 
 <div th:if="${#ctx.session.loggedInUser != null}">
   <p class="register" th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are a registered user now|">
