--- a/src/main/resources/templates/store_index.html
+++ b/src/main/resources/templates/store_index.html
@@ -18,11 +18,155 @@
             font-weight: bold;
             margin-bottom: 50px;
         }
+
+        body{
+            background-color: black;
+        }
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+        }
+
+        .wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin: 6% auto 0;
+            margin-bottom: 40px;
+        }
+
+        img{
+            height: 300px;
+            width: 300px;
+            opacity: 1;
+            display: block;
+            transition: .5s ease;
+            backface-visibility: hidden;
+            border-radius: 25px;
+        }
+
+        .product-card {
+            max-width: 300px;
+            height: 420px;
+            margin: auto;
+            background-color: red;
+            padding: 1em;
+           /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+            font-family: Arial, Helvetica, sans-serif;
+            transition: transform .5s;
+            border-radius: 25px;
+
+            border: 0.1px solid black;
+            outline-style: solid;
+            outline-color: darkred;
+        }
+
+        .product-card:hover{
+            transform: scale(1.05);
+        }
+        .product-card img {
+            max-width: 100%;
+        }
+        .product-card h4 {
+            font-size: 1.3em;
+            margin: 0.5em 0;
+            font-weight: bold;
+        }
+        .product-card div {
+            font-size: 1.2em;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+
+        .product-card button {
+            background-color: #000;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            font-size: 1em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .product-card:hover {
+            background-color: black;
+            color: #fff;
+        }
+        .product-card:hover button {
+            color: #000;
+            background-color: #fff;
+        }
+
+
+
+
+        @media screen and (max-width: 576px) {
+            .product-card {
+                font-size: 0.9em;
+            }
+        }
+
+        .middle {
+            transition: .5s ease;
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        .container:hover .image {
+            opacity: 0.3;
+        }
+
+        .container:hover .middle {
+            opacity: 1;
+        }
+
+        .text {
+            color: white;
+            font-size: 12px;
+            font-family: poppins;
+
+        }
+
+    </style>
+
+    <style>
+        body{
+            margin: 0;
+        }
+
+        #background{
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
     </style>
 </head>
 <body>
 
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
+
+<div id="background"></div>
 
 <div>
     <h1>Movie Store</h1>
