--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -3,10 +3,184 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style2.css" />
+  <!--<link rel="stylesheet" href="/css/style2.css" />-->
   <title>Title</title>
 
 
+  <style>
+    /*style.css*/
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+      line-height: 1.5;
+      min-height: 100vh;
+      background-color: white;
+      flex-direction: column;
+    }
+
+    .main {
+      background-color: #fff;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      padding: 10px 20px;
+      transition: transform 0.2s;
+      width: 500px;
+      text-align: center;
+    }
+
+    h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: black;
+      font-weight: bold;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
+
+    }
+
+    label {
+      display: block;
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 5px;
+      text-align: left;
+      color: black;
+      font-weight: bold;
+    }
+
+
+    input {
+      display: block;
+      height:50px;
+      width: 300px;
+      margin-bottom: 15px;
+      padding: 10px;
+      box-sizing: border-box;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    button {
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      border: none;
+      color: white;
+      cursor: pointer;
+      background-color: black;
+      width: 100%;
+      font-size: 16px;
+    }
+
+    .wrap {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+
+    /*gap  */
+
+
+    .container {
+      height: 600px;
+      width: 500px;
+      background-color: white;
+      box-shadow: 8px 8px 20px rgb(128, 128, 128);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .btn {
+      height: 60px;
+      width: 300px;
+      margin: 20px auto;
+      /*box-shadow: 10px 10px 30px rgb(0, 0, 0);
+      border-radius: 50px;
+
+       */
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+
+    .login,
+    .signup {
+      font-size: 22px;
+      border: none;
+      outline: none;
+      background-color: red;
+      position: relative;
+      cursor: pointer;
+      color:black;
+      font-weight: bold;
+      font-family: poppins;
+    }
+
+    p, .login{
+      font-weight: bold;
+    }
+
+    .slider {
+      height: 60px;
+      width: 150px;
+      border-radius: 50px;
+      background-image: linear-gradient(to right,
+      rgb(0, 0, 0),
+      rgb(0, 0, 0));
+      position: absolute;
+      top: 20px;
+      left: 100px;
+      transition: all 0.5s ease-in-out;
+    }
+
+    .moveslider {
+      left: 250px;
+    }
+
+    .form-section {
+      height: 500px;
+      width: 1000px;
+      padding: 20px 0;
+      display: flex;
+      position: relative;
+      transition: all 0.5s ease-in-out;
+      left: 0px;
+    }
+
+    .form-section-move {
+      left: -500px;
+    }
+
+
+    .login-box,
+    .signup-box {
+      height: 100%;
+      width: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0px 40px;
+    }
+
+    .login-box {
+      gap: 50px;
+    }
+
+    .signup-box {
+      gap: 30px;
+    }
+  </style>
+
+
+<!--2nd CSS -->
   <style>
     .error-message {
       color: red;
@@ -19,18 +193,46 @@
     }
 
     h2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: 50px;
-      color: darkred;
+      color: white;
       font-weight: bold;
-      -webkit-text-stroke: 3px black;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
+    }
+
+    p, lable, input, span{
+
+      font-family: poppins;
+    }
+
+
+    body{
+      margin: 0;
+    }
+
+    #background{
+      background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+      height: 100vh;
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      position: fixed;
+      top: 0;
+      z-index: -1;
     }
 
   </style>
 </head>
 <body>
 <header>
-  <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
 </header>
+
+<h2 class="heading" >ScreenSafari</h2>
+
+<div id="background"></div>
 
 <div class="btn">
   <a href="user_indexSignUp">
@@ -62,7 +264,7 @@
           <span id="password1-error" class="error-message"></span>
         </p>
         <div class="wrap">
-          <button id="login">
+          <button id="login" style="font-family: poppins; font-weight: bold">
             Login
           </button>
         </div>
