--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -82,14 +82,14 @@
             <a class="nav-link active" th:href="@{/logOut}" style="font-weight: bold">Logout</a>
           </li>
 
-          <a class="nav-link active" th:href="@{/cart_index}" > <i class="fa" style="font-size:24px; margin-left: 700px">&#xf07a;</i>
+          <a class="nav-link active" th:href="@{/cart_index}" > <i class="fa" style="font-size:24px; margin-left: 850px">&#xf07a;</i>
             <span class="cartNumber" th:text="${totalCartItems}">5 </span></a>
 
         </ul>
-        <form class="d-flex" role="search">
+        <!--<form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form>-->
       </div>
     </div>
 
