--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,6 +119,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
     }
 
     p{
