--- a/src/main/resources/templates/adminUpdate.html
+++ b/src/main/resources/templates/adminUpdate.html
@@ -18,16 +18,6 @@
             margin-top: 50px;
         }
 
-        h1{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 50px;
-            color: darkred;
-            font-weight: bold;
-            -webkit-text-stroke: 3px black;
-        }
-
         body{
             margin: 0;
         }
@@ -41,6 +31,27 @@
             position: fixed;
             top: 0;
             z-index: -1;
+        }
+
+        p, label, input, span, td{
+
+            font-family: poppins;
+            font-size: 15px;
+        }
+
+        tr{
+            font-family: poppins;
+        }
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
         }
 
     </style>
@@ -61,7 +72,7 @@
 <div class="container">
     <form method="post" action="/updateMovieProduct"  >
         <div class="modal-header">
-            <h4 th:value="${movieProduct.getMovie_name()}" class="modal-title">Edit Movie Product </h4>
+            <h4 th:value="${movieProduct.getMovie_name()}" class="modal-title" style="font-family: poppins">Edit Movie Product </h4>
         </div>
         <div class="form-group">
             <label for="movie_id">Movie Id</label>
@@ -84,8 +95,8 @@
                     <input type="number" th:value="${movieProduct.getListPrice()}" id="listPrice" name="listPrice" class="form-control">
                 </div>
         <div class="modal-footer" style="margin-top: 20px;">
-            <a href ="/adminPanel_index"><input type="button" class="btn btn-default" data-dismiss="modal" value="Go back to Admin Panel"></a>
-            <input type="submit" class="btn btn-info" value="Save">
+            <a href ="/adminPanel_index"><input type="button" class="btn btn-danger" data-dismiss="modal" value="Go back to Admin Panel" style="font-weight: bold; font-family: poppins; margin-right: 10px;"></a>
+            <input type="submit" class="btn btn-danger" value="Save" style="font-weight: bold; font-family: poppins;">
         </div>
     </form>
 </div>
