--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -116,7 +116,7 @@
             color: white;
             font-weight: bold;
             -webkit-text-stroke: 1px darkred;
-
+            font-family: poppins;
         }
 
         p{
