--- a/src/main/resources/templates/purchased_movies.html
+++ b/src/main/resources/templates/purchased_movies.html
@@ -9,6 +9,141 @@
     <title>Title</title>
 
   <style>
+    .message{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: white;
+      font-weight: bold;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
+    }
+
+    .wrapper{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 6% auto 0;
+      margin-bottom: 40px;
+    }
+
+    img{
+      height: 300px;
+      width: 300px;
+      opacity: 1;
+      display: block;
+      transition: .5s ease;
+      backface-visibility: hidden;
+      border-radius: 25px;
+    }
+
+    .product-card {
+      max-width: 300px;
+      height: 420px;
+      margin: auto;
+      background-color: black;
+      padding: 1em;
+      /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+      font-family: Arial, Helvetica, sans-serif;
+      transition: transform .5s;
+      border-radius: 25px;
+
+      border: 0.1px solid black;
+      outline-style: solid;
+      outline-color: darkred;
+    }
+
+    .product-card:hover{
+      transform: scale(1.05);
+    }
+    .product-card img {
+      max-width: 100%;
+    }
+    .product-card h4 {
+      font-size: 1.3em;
+      margin: 0.5em 0;
+      font-weight: bold;
+      color: white;
+    }
+    .product-card div {
+      font-size: 1.2em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+
+    .product-card button {
+      background-color: #000;
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      font-size: 1em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .product-card:hover {
+      background-color: black;
+      color: #fff;
+    }
+    .product-card:hover button {
+      color: #000;
+      background-color: #fff;
+    }
+
+
+
+
+    @media screen and (max-width: 576px) {
+      .product-card {
+        font-size: 0.9em;
+      }
+    }
+
+    .middle {
+      transition: .5s ease;
+      opacity: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      text-align: center;
+    }
+
+    .container:hover .image {
+      opacity: 0.3;
+    }
+
+    .container:hover .middle {
+      opacity: 1;
+    }
+
+    .text {
+      color: white;
+      font-size: 15px;
+      font-family: poppins;
+
+    }
+
+  </style>
+
+  <style>
     .notBought{
       display: flex;
       justify-content: center;
@@ -81,7 +216,7 @@
           </div>
           <h4 th:text="${movieProduct.movie_name}"></h4>
           <div>
-            <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold"></span>
+            <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold; color: white"></span>
           </div>
         </div>
       </div>
