--- a/src/main/resources/templates/registerSuccessUser.html
+++ b/src/main/resources/templates/registerSuccessUser.html
@@ -116,6 +116,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
     }
 
     p{
