--- a/src/main/resources/templates/loginSuccessful.html
+++ b/src/main/resources/templates/loginSuccessful.html
@@ -114,6 +114,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
     }
 
     p{
