--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -203,7 +203,7 @@
       font-family: poppins;
     }
 
-    p, lable, input, span{
+    p, label, input, span{
 
       font-family: poppins;
     }
