--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -74,9 +74,10 @@
       justify-content: center;
       align-items: center;
       font-size: 50px;
-      color: darkred;
+      color: white;
       font-weight: bold;
-      -webkit-text-stroke: 3px black;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
     }
 
   </style>
