--- a/src/main/resources/templates/checkout_index.html
+++ b/src/main/resources/templates/checkout_index.html
@@ -6,13 +6,123 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/checkout_index.css" />
+    <!--<link rel="stylesheet" href="/css/checkout_index.css" />-->
     <title>Title</title>
+
+    <style>
+        .row {
+            display: -ms-flexbox; /* IE10 */
+            display: flex;
+            -ms-flex-wrap: wrap; /* IE10 */
+            flex-wrap: wrap;
+            margin: 0 -16px;
+            margin-top: 30px;
+            margin-bottom: 50px;
+            margin-left: 50px;
+
+        }
+
+        .col-25 {
+            -ms-flex: 25%; /* IE10 */
+            flex: 25%;
+        }
+
+        .col-50 {
+            -ms-flex: 50%; /* IE10 */
+            flex: 50%;
+        }
+
+        .col-75 {
+            -ms-flex: 75%; /* IE10 */
+            flex: 75%;
+        }
+
+        .col-25,
+        .col-50,
+        .col-75 {
+            padding: 0 16px;
+        }
+
+        .container {
+            background-color: #f2f2f2;
+            padding: 5px 20px 15px 20px;
+            border: 1px solid lightgrey;
+            border-radius: 3px;
+        }
+
+        input[type=text] {
+            width: 100%;
+            margin-bottom: 20px;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+
+        label {
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        .icon-container {
+            margin-bottom: 20px;
+            padding: 7px 0;
+            font-size: 24px;
+        }
+
+        .continueButton {
+            background-color: black;
+            color: white;
+            padding: 12px;
+            margin: 10px 0;
+            border: none;
+            width: 100%;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 17px;
+        }
+
+        .continueButton p{
+            background-color: white;
+        }
+
+        .continueButton:hover {
+            background-color: black;
+        }
+
+        span.price {
+            float: right;
+            color: grey;
+        }
+
+        /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+        @media (max-width: 800px) {
+            .row {
+                flex-direction: column-reverse;
+            }
+            .col-25 {
+                margin-bottom: 20px;
+            }
+        }
+
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
+        }
+    </style>
 
     <style>
         .message{
             color: red;
             font-weight: bold;
+            font-family: poppins;
+            font-size: 15px;
         }
 
         body{
@@ -28,6 +138,18 @@
             position: fixed;
             top: 0;
             z-index: -1;
+        }
+
+        p, label, input, option, select{
+
+            font-family: poppins;
+            font-size: 15px;
+            font-weight: bold;
+        }
+
+        h4, h3, b,span{
+            font-family: poppins;
+            font-weight: bold;
         }
     </style>
 
@@ -191,7 +313,7 @@
         </span>
                 </h4>
                 <div th:each="movie : ${movies}" style="display: flex; justify-content: space-between;">
-                    <p  th:text="${movie.getMovie_name()}"><a href="#"></a> <p style="font-weight: bold; margin-left: 30px"><span class="price" th:text=" |£${movie.listPrice} |"></span></p></p>
+                    <p  th:text="${movie.getMovie_name()}"><a href="#"></a> <p style="font-weight: bold; margin-left: 30px"><span class="price" th:text=" |£${movie.listPrice} |" style="color: black; font-weight: bold;"></span></p></p>
                 </div>
                 <hr>
                 <p>Total <span class="price" style="color:black"><b th:text=" |£${total} |"></b></span></p>
@@ -337,7 +459,7 @@
                         </div>
 
                     </div>
-                    <input type="submit" value="Continue to checkout" class="continueButton" onclick="clicked(event)">
+                    <input type="submit" value="Purchase Items" class="continueButton" onclick="clicked(event)">
                 </form>
             </div>
         </div>
@@ -351,7 +473,7 @@
         </span>
                 </h4>
                 <div th:each="movie : ${movies}" style="display: flex; justify-content: space-between;">
-                    <p  th:text="${movie.getMovie_name()}"><a href="#"></a> <p style="font-weight: bold; margin-left: 30px"><span class="price" th:text=" |£${movie.listPrice} |"></span></p></p>
+                    <p  th:text="${movie.getMovie_name()}"><a href="#"></a> <p style="font-weight: bold; margin-left: 30px"><span class="price" th:text=" |£${movie.listPrice} |" style="color: black; font-weight: bold;"></span></p></p>
                 </div>
                 <hr>
                 <p>Total <span class="price" style="color:black"><b th:text=" |£${total} |"></b></span></p>
